removes hands symbol

--- a/payments/templates/payments/dashboard.html
+++ b/payments/templates/payments/dashboard.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome, {{ user.username }}! 👋</h1>
+        <h1>Welcome, {{ user.username }}! </h1>
         
         <div class="card">
             <p><strong>Email:</strong> {{ user.email }}</p>
